--- a/package.json
+++ b/package.json
@@ -52,35 +52,48 @@
     "@babel/core": "7.23.9",
     "@size-limit/preset-small-lib": "11.0.2",
     "@storybook/addon-a11y": "7.6.16",
-    "@storybook/addon-designs": "^7.0.9",
+    "@storybook/addon-designs": "7.0.9",
     "@storybook/addon-docs": "7.6.16",
     "@storybook/addon-essentials": "7.6.16",
-    "@storybook/addon-info": "5.3.21",
-    "@storybook/addon-interactions": "^7.6.16",
+    "@storybook/addon-interactions": "7.6.16",
     "@storybook/addon-links": "7.6.16",
-    "@storybook/addon-onboarding": "^1.0.11",
+    "@storybook/addon-onboarding": "1.0.11",
     "@storybook/addon-storyshots": "7.6.16",
     "@storybook/addon-storyshots-puppeteer": "7.6.16",
     "@storybook/addon-storysource": "7.6.16",
     "@storybook/addons": "7.6.16",
     "@storybook/blocks": "7.6.16",
+    "@storybook/preset-scss": "1.0.3",
     "@storybook/react": "7.6.16",
     "@storybook/react-webpack5": "7.6.16",
     "@storybook/test": "7.6.16",
+    "@types/lodash": "4.14.202",
+    "@types/node": "20.11.19",
     "@types/react": "18.2.56",
     "@types/react-dom": "18.2.19",
     "babel-loader": "9.1.3",
-    "chromatic": "^10.9.6",
+    "chromatic": "10.9.6",
+    "css-loader": "6.10.0",
     "husky": "9.0.11",
     "plop": "2.7.4",
+    "postcss": "8.4.35",
     "react": "18.2.0",
-    "react-docgen-typescript": "^2.2.2",
+    "react-docgen-typescript": "2.2.2",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "rollup-plugin-postcss": "4.0.2",
+    "sass": "1.71.0",
+    "sass-loader": "14.1.0",
     "size-limit": "11.0.2",
-    "storybook": "^7.6.16",
+    "storybook": "7.6.16",
+    "style-loader": "3.3.4",
     "tsdx": "0.14.1",
     "tslib": "2.6.2",
     "typescript": "5.3.3"
-  }
+  },
+  "dependencies": {
+    "lodash": "4.17.21",
+    "lodash-es": "4.17.21"
+  },
+  "packageManager": "yarn@4.1.0"
 }
