--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,49 @@
 {
     // see https://www.typescriptlang.org/tsconfig to better understand tsconfigs
-    "include": ["src/**/*", "types"],
+    "include": ["src", "types"],
+    "exclude": ["node_modules", "dist"],
     "compilerOptions": {
-        "target": "es6",
-        "lib": [
-            "DOM",
-            "DOM.Iterable",
-            "ESNext"
-        ],
-        "module": "esnext",
-        "importHelpers": true,
-        "rootDir": "./src",
-        "moduleResolution": "node",
-        "jsx": "react",
-        "resolveJsonModule": true,
-        "noEmitHelpers": true,
-        "isolatedModules": true,
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true,
-        "noFallthroughCasesInSwitch": true,
-        "noEmit": true,
+      "target": "ES6",
+      "module": "esnext",
+      "lib": ["dom", "esnext"],
+      "importHelpers": true,
+      // output .d.ts declaration files for consumers
+      "declaration": true,
+      // output .js.map sourcemap files for consumers
+      "sourceMap": true,
+      // Base directory to resolve non-relative module names
+      "baseUrl": ".",
+      // match output dir to input dir. e.g. dist/index instead of dist/src/index
+      "rootDir": "./src",
+      // Allow default imports from modules with no default export
+      "allowSyntheticDefaultImports": true,
+      // Include modules imported with '.json' extension
+      "resolveJsonModule": true,
+      // stricter type-checking for stronger correctness. Recommended by TS
+      "strict": true,
+      // linter checks for common issues
+      "noImplicitReturns": true,
+      "noFallthroughCasesInSwitch": true,
+      // noUnused* overlap with @typescript-eslint/no-unused-vars, can disable if duplicative
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      // use Node's module resolution algorithm, instead of the legacy TS one
+      "moduleResolution": "node",
+      // transpile JSX to React.createElement
+      "jsx": "react",
+      // interop between ESM and CJS modules. Recommended by TS
+      "esModuleInterop": true,
+      // significant perf increase by skipping checking .d.ts files, particularly those in node_modules. Recommended by TS
+      "skipLibCheck": true,
+      // error out if import and file system have a casing mismatch. Recommended by TS
+      "forceConsistentCasingInFileNames": true,
+      // Ensure each file can be safely transpiled without relying on other imports
+      "isolatedModules": true,
+      // `tsdx build` ignores this option, but it is commonly used when type-checking separately with `tsc`
+      "noEmit": true,
+      // Specify paths for module names
+      "paths": {                                 
+        "*": ["src/*"]
+      }
     }
 }
