--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
   },
   "prettier": {
     "printWidth": 120,
+    "tabWidth": 2,
     "semi": true,
     "singleQuote": true,
+    "useTabs": false,
+    "bracketSpacing": true,
+    "arrowParens": "avoid",
     "trailingComma": "es5"
   },
   "name": "gear-ui",
@@ -89,7 +93,8 @@
     "style-loader": "3.3.4",
     "tsdx": "0.14.1",
     "tslib": "2.6.2",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "typescript-plugin-css-modules": "5.1.0"
   },
   "dependencies": {
     "lodash": "4.17.21",
